hub/manifests/hub/templates/gitea-token.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gitea-token
  namespace: hub
spec:
  headers:
    customRequestHeaders:
      Authorization: "Basic ${GITEA_TOKEN_B64}"
