hub/manifests/hub/templates/github-token.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: github-token
  namespace: hub
spec:
  headers:
    customRequestHeaders:
      Authorization: "Basic ${GITHUB_TOKEN_B64}"
