hub/manifests/hub/templates/02-hub-notification.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-notification
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-notification
  template:
    metadata:
      labels:
        app: hub-notification
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-notification
          image: gcr.io/traefiklabs/hub-notification:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --sendgrid-host=https://api.sendgrid.com/v3/
            - --sendgrid-endpoint=/mail/send
            - --sendgrid-alert-template-id=d-e31e1f5ce35c4b95b8390d19ce1a2543
            - --sendgrid-invitation-template-id=d-31a4a51c91f245728e419d5980fe1bbc
            - --sendgrid-beta-invitation-template-id=d-57cb9d7ad67e4fddb83db4c9b372eb91
            - --sendgrid-welcome-template-id=d-267cf2806d0f4cdc99a1c1d2cbd6d3dc
            - --sendgrid-unverified-email-reminder-template-id=d-a06cdfd675e649459394b9e16a676b44
            - --sendgrid-no-cluster-reminder-template-id=d-5f561710d8d74ecab6dbcddb62c3f954
            - --sendgrid-request-scale-offer-template-id=d-5214ae9100c943dd8194aa3af6679ee8
            - --sendgrid-deprecated-agent-15days-template-id=d-d-0ffc1f69318d42c5a32aac103c8dd25b
            - --sendgrid-deprecated-agent-5days-template-id=d-835d0c6aa1d44255b99c79f2e8722b71
            - --sendgrid-deprecated-agent-template-id=d-1869455d64e5485498a3dbda938bd6a7
            - --sendgrid-from=noreply@traefik.io
            - --sendgrid-from-name=Me
            - --sendgrid-sales-email=${GCLOUD_EMAIL}
            - --mongodb-uri=mongodb://root:admin@mongodb.mongo.svc.cluster.local:27017/notification?authSource=admin

---
apiVersion: v1
kind: Service
metadata:
  name: hub-notification
  namespace: hub
  labels:
    app: hub-notification
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-notification
  selector:
    app: hub-notification
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: notification-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/notification/external`)
      services:
        - name: hub-notification
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: notification-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/notification/external`)
      services:
        - name: hub-notification
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: notification-internal-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/notification/internal`)
      services:
        - name: hub-notification
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: notification-internal
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/notification/internal`)
      services:
        - name: hub-notification
          port: 80
      middlewares:
        - name: stripprefix
