hub/manifests/hub/templates/hub-cluster.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-cluster
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-cluster
  template:
    metadata:
      labels:
        app: hub-cluster
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-cluster
          image: gcr.io/traefiklabs/hub-cluster:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --mongodb-uri=mongodb://root:admin@mongodb.mongo.svc.cluster.local:27017/clusters?authSource=admin
---
apiVersion: v1
kind: Service
metadata:
  name: hub-cluster
  namespace: hub
  labels:
    app: hub-cluster
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-cluster
    - port: 40000
      targetPort: 40000
      name: hub-cluster-debug
  selector:
    app: hub-cluster

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster-agent-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && Path(`/agent/link`)
      services:
        - name: hub-cluster
          port: 80
      middlewares:
        - name: auth-token
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster-agent
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && Path(`/agent/link`)
      services:
        - name: hub-cluster
          port: 80
      middlewares:
        - name: auth-token

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/cluster/external`)
      services:
        - name: hub-cluster
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/cluster/external`)
      services:
        - name: hub-cluster
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster-internal-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/cluster/internal`)
      services:
        - name: hub-cluster
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster-internal
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/cluster/internal`)
      services:
        - name: hub-cluster
          port: 80
      middlewares:
        - name: stripprefix
