hub/manifests/hub/templates/hub-offer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-offer
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-offer
  template:
    metadata:
      labels:
        app: hub-offer
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-offer
          image: gcr.io/traefiklabs/hub-offer:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
          args:
            - serve
            - --addr=:80

---
apiVersion: v1
kind: Service
metadata:
  name: hub-offer
  namespace: hub
  labels:
    app: hub-offer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: hub-offer

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: offer-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/offer/external`)
      services:
        - name: hub-offer
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: offer-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/offer/external`)
      services:
        - name: hub-offer
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: offer-agent
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && Path(`/agent/config`)
      services:
        - name: hub-offer
          port: 80
      middlewares:
        - name: auth-token
    - kind: Rule
      match: Host(`platform.docker.localhost`) && Path(`/agent/quotas`)
      services:
        - name: hub-offer
          port: 80
      middlewares:
        - name: auth-token

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: offer-agent-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && Path(`/agent/config`)
      services:
        - name: hub-offer
          port: 80
      middlewares:
        - name: auth-token
    - kind: Rule
      match: Host(`platform.docker.localhost`) && Path(`/agent/quotas`)
      services:
        - name: hub-offer
          port: 80
      middlewares:
        - name: auth-token
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: offer-internal-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/offer/internal`)
      services:
        - name: hub-offer
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: offer-internal
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/offer/internal`)
      services:
        - name: hub-offer
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: offer-stripe-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/offer/stripe`)
      services:
        - name: hub-offer
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: offer-stripe
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/offer/stripe`)
      services:
        - name: hub-offer
          port: 80
      middlewares:
        - name: stripprefix
